--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <nav>
+            <img src="img/logo.png" alt="Logo QA Wave Solutions" class="logo-img">
             <div class="menu-toggle">
                 <span></span>
                 <span></span>
@@ -32,7 +33,9 @@
         <div class="hero-content">
             <h1>QA Wave Solutions</h1>
             <p>En nuestra consultoría garantizamos la calidad de tu software, detectando errores y optimizando procesos para asegurar una experiencia sin fallos alineada con los más altos estándares.</p>
-            <button class="btn-primary">Conoce más</button>
+            <a href="https://wa.me/542236686584?text=Hola!%20Quiero%20conocer%20más" target="_blank">
+                <button class="btn-primary">Conoce más</button>
+            </a>
         </div>
         <div class="hero-image">
             <!-- REPLACE WITH YOUR HERO IMAGE: people with mobile devices on blue background -->
@@ -86,14 +89,14 @@
         <div class="content-container">
             <div class="contact-info">
                 <h2>¿Hablamos?</h2>
-                <p>Contáctanos para coordinar una reunión y empezar a trabajar juntos</p>
+                <p>Contáctanos para empezar a trabajar juntos</p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/qawavesolutions/"target="_blank"><i class="fab fa-linkedin"></i> www.linkedin.com/qawaavesolutions</a>
                         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@qawavesolutions.com.ar&su=Info&body=Hola,%20quiero%20saber%20más%20sobre..."target="_blank"><i class="far fa-envelope"></i> info@qawavesolutions.com.ar</a>
                 </div>
             </div>
             <div class="contact-form">
-                <form id="contactForm">
+                <form id="contactForm"> 
                     <div class="form-group">
                         <input type="text" id="name" placeholder="Nombre completo" required>
                     </div>
@@ -117,7 +120,7 @@
     <footer>
         <div class="footer-logo">
             <!-- REPLACE WITH YOUR LOGO IMAGE -->
-            <img src="img/logo.png" alt="Logo QA Wave Solutions" class="logo-img">
+            <img src="img/foter.png" alt="Logo QA Wave Solutions" class="logo-img">
             <p>QA Wave Solutions</p>
         </div>
     </footer>
