--- a/index.html
+++ b/index.html
@@ -96,18 +96,20 @@
                 </div>
             </div>
             <div class="contact-form">
-                <form id="contactForm"> 
+                <form id="contactForm" name="contact" method="POST" data-netlify="true">
                     <div class="form-group">
-                        <input type="text" id="name" placeholder="Nombre completo" required>
+                        <input type="text" id="name" name="name" placeholder="Nombre completo" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" id="email" placeholder="Email" required>
+                        <input type="email" id="email" name="email" placeholder="Email" required>
                     </div>
                     <div class="form-group">
-                        <textarea id="message" placeholder="Mensaje" required></textarea>
+                        <textarea id="message" name="message" placeholder="Mensaje" required></textarea>
                     </div>
                     <button type="submit" class="btn-submit">Enviar</button>
                 </form>
+            </div>
+            
             </div>
         </div>
     </section>
