--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
     target="_blank">
      <i class="fa-brands fa-whatsapp"></i>
  </a>
+ <div id="popup" class="popup hidden">
+    <span class="popup-text">Tu consulta fue envida</span>
+    <span class="popup-icon">✅</span>
+</div>
  
     <footer>
         <div class="footer-logo">
