--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <label>Mensaje: <textarea name="message" required></textarea></label>
                     </p>
                     <p>
-                        <button type="submit">Enviar</button>
+                        <button type="submit"class="btn-submit" >Enviar</button>
                     </p>
                 </form>
                 
@@ -125,7 +125,10 @@
  </a>
  <div id="popup" class="popup hidden">
     <span class="popup-text">Tu consulta fue envida</span>
-    <span class="popup-icon">✅</span>
+    <span class="popup-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="green" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M20 6L9 17l-5-5"></path>
+      </svg>
+      </span>
 </div>
  
     <footer>
