--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="contact-form">
-                <form id="contactForm" name="contact" method="POST" data-netlify="true" action="#">
+                <form id="contactForm" name="contact" method="POST" data-netlify="true" action=".">
                     <input type="hidden" name="subject" value="Consulta desde sitio web" />
                 
                     <p>
