--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -116,14 +116,14 @@
                     </p>
             </form>
 
-                <div id="popup" class="hidden">¡Mensaje enviado con éxito!</div>
+                <div id="popup" class="popup">¡Consulta enviada con éxito!</div>
                 
             </div>
             
             </div>
         </div>
     </section>
-    <a href="https://wa.me/542236686584?text=Hola!%20Quiero%20conocer%20más" 
+    <a href="https://wa.me/542236686584?text=Hola,%20Estoy%20interesado%20en%20mejorar%20la%20calidad%20de%20mi%20software%20¿Me%20pueden%20dar%20más%20información?%20" 
     class="whatsapp-button" 
     target="_blank">
      <i class="fa-brands fa-whatsapp"></i>
