--- a/success.html
+++ b/success.html
@@ -47,11 +47,11 @@
             color: white;
             text-decoration: none;
             font-size: 18px;
-            margin-top: 15px;
+            margin-top: 10px;
         }
         
     </style>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    
 </head>
 <body>
     <div class="success-container">
@@ -59,7 +59,6 @@
         <p>Formulario enviado con éxito</p>
     </div>
     <a href="index.html" class="back-link">
-        <i class="fas fa-arrow-left"></i> ← volver a inicio
-    </a>
+        <i class="fas fa-arrow-left"></i> volver a inicio </a>
 </body>
 </html>
