--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="hero-content">
             <h1>QA Wave Solutions</h1>
             <p>En nuestra consultoría garantizamos la calidad de tu software, detectando errores y optimizando procesos para asegurar una experiencia sin fallos alineada con los más altos estándares.</p>
-            <a href="https://wa.me/542236686584?text=Hola!%20Quiero%20conocer%20más" target="_blank">
+            <a href="https://wa.me/542235318898?text=Hola!%20Quiero%20conocer%20más" target="_blank">
                 <button class="btn-primary">Conoce más</button>
             </a>
         </div>
@@ -92,7 +92,7 @@
                 <p>Contáctanos para empezar a trabajar juntos</p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/qawavesolutions/"target="_blank"><i class="fab fa-linkedin"></i> www.linkedin.com/qawaavesolutions</a>
-                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@qawavesolutions.com.ar&su=Info&body=Hola,%20quiero%20saber%20más%20sobre..."target="_blank"><i class="far fa-envelope"></i> info@qawavesolutions.com.ar</a>
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@qawavesolutions.com.ar&su=Info&body=Hola,%20Estoy%20interesado%20en%20mejorar%20la%20calidad%20de%20mi%20software%20¿Me%20pueden%20dar%20más%20información?%20"target="_blank"><i class="far fa-envelope"></i> info@qawavesolutions.com.ar</a>
                 </div>
             </div>
             <div class="contact-form">
@@ -123,7 +123,7 @@
             </div>
         </div>
     </section>
-    <a href="https://wa.me/542236686584?text=Hola,%20Estoy%20interesado%20en%20mejorar%20la%20calidad%20de%20mi%20software%20¿Me%20pueden%20dar%20más%20información?%20" 
+    <a href="https://wa.me/542235318898?text=Hola,%20Estoy%20interesado%20en%20mejorar%20la%20calidad%20de%20mi%20software%20¿Me%20pueden%20dar%20más%20información?%20" 
     class="whatsapp-button" 
     target="_blank">
      <i class="fa-brands fa-whatsapp"></i>
