--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <h2>¿Hablamos?</h2>
                 <p>Contáctanos para empezar a trabajar juntos</p>
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/qawavesolutions/"target="_blank"><i class="fab fa-linkedin"></i> www.linkedin.com/qawaavesolutions</a>
+                    <a href="https://www.linkedin.com/company/qawave-solutions/?lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3BRszpERFtRLuj8k12slHl0w%3D%3D"target="_blank"><i class="fab fa-linkedin"></i> www.linkedin.com/qawaavesolutions</a>
                         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@qawavesolutions.com.ar&su=Info&body=Hola,%20Estoy%20interesado%20en%20mejorar%20la%20calidad%20de%20mi%20software%20¿Me%20pueden%20dar%20más%20información?%20"target="_blank"><i class="far fa-envelope"></i> info@qawavesolutions.com.ar</a>
                 </div>
             </div>
@@ -102,13 +102,13 @@
                     <p>
                         <label for="name">Tu Nombre:</label>
                         <input type="text" id="name" name="name" required />
-                    </p>
+                    </p>9000/
                     <p>
                         <label for="email">Tu Email:</label>
                         <input type="email" id="email" name="email" required />
                     </p>
                     <p>
-                        <label for="message">Mensaje:</label>
+                        <label for="message">Mensaje:</label>000
                         <textarea id="message" name="message" required></textarea>
                     </p>
                     <p>
